Security lab - code cleanup, HTML

--- a/securitylab.topmonks.com/src/html/index.njk
+++ b/securitylab.topmonks.com/src/html/index.njk
@@ -98,12 +98,12 @@
           <h2>Topmonks Security Lab Vám pomůže těchto oblastech:</h2>
         </div>
         <div class="content-menu mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <label class="content-menu__tab tab--active"><a href="#section__hardware">Hardware</a></label>
-          <label class="content-menu__tab tab--inactive"><a href="#section__software">Software</a></label>
-          <label class="content-menu__tab tab--inactive"><a href="#section__social">Social Engineering</a></label>
+          <label class="content-menu__tab tab--active"><a href="#security-field__hardware">Hardware</a></label>
+          <label class="content-menu__tab tab--inactive"><a href="#security-field__software">Software</a></label>
+          <label class="content-menu__tab tab--inactive"><a href="#security-field__social">Social Engineering</a></label>
         </div>
         <picture
-          class="security-field__bg security-field__bg--hardware mdc-layout-grid__cell mdc-layout-grid__cell--span-6"
+          class="security-field__bg security-field__bg--hardware mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop"
           data-aos="fade-right">
           <source media="screen and (max-width: 399px)"
                   srcset="{{ "/securitylab.topmonks.com/hardware.svg" | cloudinaryUrl(width=400) }} 1x,
@@ -150,9 +150,9 @@
     <div class="mdc-layout-grid tm-layout-wrapper">
       <div class="mdc-layout-grid__inner">
         <div class="content-menu mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <label class="content-menu__tab tab--inactive"><a href="#section__hardware">Hardware</a></label>
-          <label class="content-menu__tab tab--active"><a href="#section__software">Software</a></label>
-          <label class="content-menu__tab tab--inactive"><a href="#section__social">Social Engineering</a></label>
+          <label class="content-menu__tab tab--inactive"><a href="#security-field__hardware">Hardware</a></label>
+          <label class="content-menu__tab tab--active"><a href="#security-field__software">Software</a></label>
+          <label class="content-menu__tab tab--inactive"><a href="#security-field__social">Social Engineering</a></label>
         </div>
         <div class="tabs security-field__content order-2 mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop"
              data-aos="fade-right">
@@ -242,7 +242,7 @@
           </script>
         </div>
         <picture
-          class="security-field__bg security-field__bg--software order-1 mdc-layout-grid__cell mdc-layout-grid__cell--span-6"
+          class="security-field__bg security-field__bg--software order-1 mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop"
           data-aos="fade-left">
           <source media="screen and (max-width: 399px)"
                   srcset="{{ "/securitylab.topmonks.com/software.svg" | cloudinaryUrl(width=400) }} 1x,
@@ -266,12 +266,12 @@
     <div class="mdc-layout-grid tm-layout-wrapper">
       <div class="mdc-layout-grid__inner">
         <div class="content-menu mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <label class="content-menu__tab tab--inactive"><a href="#section__hardware">Hardware</a></label>
-          <label class="content-menu__tab tab--inactive"><a href="#section__software">Software</a></label>
-          <label class="content-menu__tab tab--active"><a href="#section__social">Social Engineering</a></label>
+          <label class="content-menu__tab tab--inactive"><a href="#security-field__hardware">Hardware</a></label>
+          <label class="content-menu__tab tab--inactive"><a href="#security-field__software">Software</a></label>
+          <label class="content-menu__tab tab--active"><a href="#security-field__social">Social Engineering</a></label>
         </div>
         <picture
-          class="security-field__bg security-field__bg--social mdc-layout-grid__cell mdc-layout-grid__cell--span-6"
+          class="security-field__bg security-field__bg--social mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop"
           data-aos="fade-right">
           <source media="screen and (max-width: 399px)"
                   srcset="{{ "/securitylab.topmonks.com/social.svg" | cloudinaryUrl(width=400) }} 1x,
