--- a/securitylab.topmonks.com/src/stylesheets/main.scss
+++ b/securitylab.topmonks.com/src/stylesheets/main.scss
@@ -43,7 +43,7 @@ html {
 
   .sub-title {
     svg {
-      margin-bottom: -6px;
+      margin-bottom: -7px;
       @media (max-width: 539px) {
         width: 24px;
         height: 24px;
@@ -63,11 +63,9 @@ html {
   .security-field__title {
     border-radius: 10px;
     background-color: var(--mdc-theme--primary);
-
     h2 {
       margin: 0;
     }
-
     @media (min-width: 540px) {
       padding: 24px 32px;
     }
@@ -86,10 +84,14 @@ html {
         margin: 8px auto;
       }
     }
+    @media (max-width: 539px) {
+      margin: 1em 0;
+    }
   }
 
   // Switching tabs
   .tabs, .tabs2 {
+    position: relative;
     #tabs_ul {
       li {
         width: 50%;
@@ -250,18 +252,18 @@ html {
     padding: 0.75rem;
     border-radius: 99px; // just a high number to create pill effect
   }
-  @media (max-width: 839px) {
-    .order-1 {
-      -webkit-order: 1; /* Safari 6.1+ */
-      order: 1;
-    }
-    .order-2 {
-      -webkit-order: 2; /* Safari 6.1+ */
-      order: 2;
-    }
-  }
   @media (max-width: 700px) {
     transform: scale(0.6);
+  }
+}
+@media (max-width: 839px) {
+  .order-1 {
+    -webkit-order: 1; /* Safari 6.1+ */
+    order: 1;
+  }
+  .order-2 {
+    -webkit-order: 2; /* Safari 6.1+ */
+    order: 2;
   }
 }
 //
@@ -270,9 +272,9 @@ html {
 // CONTACT
 .contact {
   margin: 6em 0 10em;
-
   h2 {
     font-size: 24px;
+    margin: 1em 0;
   }
 }
 
@@ -281,9 +283,6 @@ html {
 @media screen and (min-width: 1440px) {
   .tab_content, .tab_content2 {
     width: 606px;
-  }
-  #tabs_ul, #tabs_ul2 {
-    position: relative;
   }
   .content, .content2 {
     position: absolute;
