Security lab - new TM logo

--- a/securitylab.topmonks.com/src/html/components/header.njk
+++ b/securitylab.topmonks.com/src/html/components/header.njk
@@ -7,9 +7,13 @@
       <nav class="navbar mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <div class="mdc-layout-grid__inner">
           <div class="logo mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
-            <a class="logo" href="/"
+            <a class="logo--desktop" href="/"
+               title="Go to homepage">{{ sprite('logo-desktop', alt="Logo", viewBox="0 0 236 60") }}
+            </a>
+            <a class="logo--phone" href="/"
                title="Go to homepage">{{ sprite('logo-phone', alt="Logo", viewBox="0 0 800 800") }}
             </a>
+
           </div>
           <div class="menu mdc-layout-grid__cell mdc-layout-grid__cell--span-1-phone mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-5-desktop">
             <ul class="nav-menu">
