--- a/securitylab.topmonks.com/src/html/index.njk
+++ b/securitylab.topmonks.com/src/html/index.njk
@@ -69,7 +69,7 @@
             Tradiční bezpečnostní řešení už na ně nestačí
           </p>
           <div class="btn btn__action">
-            <a class="action-button" href="#">Chci od vás pomoc</a>
+            <a class="action-button" href="#contact">Chci od vás pomoc</a>
           </div>
         </div>
         <picture class="intro__img mdc-layout-grid__cell mdc-layout-grid__cell--span-5">
