--- a/securitylab.topmonks.com/src/stylesheets/typography.scss
+++ b/securitylab.topmonks.com/src/stylesheets/typography.scss
@@ -33,7 +33,7 @@ body {
   font-style: normal;
   background-color: var(--mdc-theme--primary);
   letter-spacing: 0;
-  font: 18px/1.5 "SF Pro";
+  font: 18px/1.5 'SF Pro Text', -apple-system, BlinkMacSystemFont, Roboto, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   font-kerning: normal;
   font-variant-numeric: lining-nums slashed-zero;
   font-variant-ligatures: common-ligatures contextual;
