--- a/securitylab.topmonks.com/src/html/components/header.njk
+++ b/securitylab.topmonks.com/src/html/components/header.njk
@@ -15,7 +15,8 @@
             </a>
 
           </div>
-          <div class="menu mdc-layout-grid__cell mdc-layout-grid__cell--span-1-phone mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-5-desktop">
+          <div
+            class="menu mdc-layout-grid__cell mdc-layout-grid__cell--span-1-phone mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-5-desktop">
             <ul class="nav-menu">
               <li class="nav-item">
                 <a href="#security-field__hardware" class="nav-link">Hardware</a>
@@ -36,28 +37,26 @@
               <a href="#contact">Chci od vás pomoc</a>
             </div>
           </div>
-          <div class="navigation mdc-layout-grid__cell mdc-layout-grid__cell--span-1">
-            <div class="hamburger">
-              <span class="bar"></span>
-              <span class="bar"></span>
-              <span class="bar"></span>
-            </div>
+          <div class="hamburger">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
           </div>
         </div>
-          <script>
-            const hamburger = document.querySelector(".hamburger");
-            const navMenu = document.querySelector(".nav-menu");
+        <script>
+          const hamburger = document.querySelector(".hamburger");
+          const navMenu = document.querySelector(".nav-menu");
 
-            hamburger.addEventListener("click", () => {
-              hamburger.classList.toggle("active");
-              navMenu.classList.toggle("active");
-            });
+          hamburger.addEventListener("click", () => {
+            hamburger.classList.toggle("active");
+            navMenu.classList.toggle("active");
+          });
 
-            document.querySelectorAll(".nav-link").forEach(n => n.addEventListener("click", () => {
-              hamburger.classList.remove("active");
-              navMenu.classList.remove("active");
-            }));
-          </script>
+          document.querySelectorAll(".nav-link").forEach(n => n.addEventListener("click", () => {
+            hamburger.classList.remove("active");
+            navMenu.classList.remove("active");
+          }));
+        </script>
       </nav>
     </div>
   </div>
