--- a/securitylab.topmonks.com/src/stylesheets/header.scss
+++ b/securitylab.topmonks.com/src/stylesheets/header.scss
@@ -46,10 +46,23 @@ header {
     .nav-menu {
       display: flex;
       align-items: center;
+      padding: 8em 0 3em;
+      position: fixed;
+      left: -100%;
+      top: 0;
       gap: 60px;
+      flex-direction: column;
+      background: linear-gradient(114.54deg, #45108A 2.67%, #3D065F 29.36%, #10054D 98.58%);
+      width: 100%;
+      height: 100vh;
+      text-align: center;
+      transition: 0.3s;
+      margin-top: 0;
+      z-index: 100;
 
       .nav-item {
         .nav-link {
+          margin: 20px 0;
           padding: 14px 24px;
           transition: 0.7s ease;
           border-radius: 30px;
@@ -60,25 +73,24 @@ header {
           }
         }
       }
+      &.active {
+        left: 0;
+      }
     }
-
     .btn__action {
       a {
         font-size: 18px;
       }
     }
 
-    .navigation {
-      cursor: pointer;
-      background: var(--mdc-theme--secondary);
-      width: 56px;
-      height: 56px;
-      border-radius: 30px;
-      z-index: 100;
-
       .hamburger {
         display: block;
-        margin-top: 19px;
+        cursor: pointer;
+        background: var(--mdc-theme--secondary);
+        width: 56px;
+        height: 56px;
+        border-radius: 30px;
+        z-index: 100;
         .bar {
           display: block;
           width: 25px;
@@ -88,7 +100,9 @@ header {
           transition: all 0.3s ease-in-out;
           border-radius: 4px;
           background-color: var(--mdc-theme--primary);
-        }
+          &:first-of-type {
+            margin-top: 18px;
+          }
       }
     }
 
@@ -102,33 +116,6 @@ header {
 
     .hamburger.active .bar:nth-child(3) {
       transform: translateY(-6px) rotate(-45deg);
-    }
-
-    .nav-menu {
-      padding: 44px 0;
-      position: fixed;
-      left: -100%;
-      top: 0;
-      gap: 0;
-      flex-direction: column;
-      background: linear-gradient(114.54deg, #45108A 2.67%, #3D065F 29.36%, #10054D 98.58%);
-      width: 100%;
-      height: 100vh;
-      text-align: center;
-      transition: 0.3s;
-      margin-top: 0;
-      z-index: 100;
-
-      .nav-item {
-        margin: 20px 0;
-      }
-      @media (max-width: 539px) {
-        top: 70px
-      }
-    }
-
-    .nav-menu.active {
-      left: 0;
     }
   }
 }
