Security lab - implementace TM.cz patičky

--- a/securitylab.topmonks.com/src/html/index.njk
+++ b/securitylab.topmonks.com/src/html/index.njk
@@ -1,4 +1,5 @@
 {% extends 'layouts/main.njk' %}
+
 {% from 'macros/helpers.njk' import css, sprite %}
 {% set page = 'security-lab' %}
 {% set language = 'cs' %}
@@ -406,5 +407,5 @@
 {% endblock %}
 
 {% block footer %}
-  {% include "components/footer.njk" %}
+  {% include "shared/footer.njk" %}
 {% endblock %}
