--- a/securitylab.topmonks.com/src/html/layouts/main.njk
+++ b/securitylab.topmonks.com/src/html/layouts/main.njk
@@ -35,8 +35,7 @@
 <main>
   {% block content %}{% endblock %}
 </main>
-{% block footer %}
-{% endblock %}
+{% include '../components/footer.njk' %}
 
 {{ spriteTarget() }}
 
