--- a/securitylab.topmonks.com/src/html/index.njk
+++ b/securitylab.topmonks.com/src/html/index.njk
@@ -126,9 +126,8 @@
              data-aos="fade-left">
           <div class="mdc-layout-grid__inner">
             <div class="security-field__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-              <p>Výroba HW pro speciální činnosti (odposlechy GSM. rádiových sítí,
-                rušičky, kódovaná úložiště, útočný hw atd., zabezpečení,
-                identifikace útočných prvků atd.)</p>
+              <p>Výroba HW pro speciální činnosti (specifický monitoring GSM sítí a rádiových sítí kódovaná uložiště,
+                útočný hw atd., zabezečení, identifikace útočných prvků atd.)</p>
             </div>
             <div class="security-field__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
               <p>Penetrační testy HW prvků</p>
